[tool.poetry]
name = "code-review-assistant"
version = "0.1.0"
description = "AI-powered tool that reviews code from GitHub repositories and provides improvement suggestions."
authors = ["Shrey <your-email@example.com>"]
readme = "README.md"
packages = [{include = "code_review_assistant"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "^0.27.2"
gitpython = "^3.1.31"
streamlit = "^1.20.0"
streamlit-tree-select = "^0.0.5"
tiktoken = "^0.4.0"
# ensure compatibility during builds
numpy = "^1.26.0"
# pinned to avoid source-compilation on Cloud
frozenlist = ">=1.4.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core", "setuptools>=61.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = "code_review_assistant"
